# Game-Sample

./: .clang-format  .gitignore  CMakeLists.txt  Console.cpp  Console.h  Doxyfile  Game-Sample.cpp  Graphics.cpp  Graphics.h  Macro.h  README.md  Timer.h  opencore.cpp  opencore.h  psp_configure.sh  readme.md  structure.txt
assets/assets/script/: ITEMS_10001.json  STAGE_10000.json  STAGE_10001.json  root.json
assets/maps/: paleland.ocmp  test_circle.ocmp  test_circle_radius.ocmp  test_newTemple.ocmp
engine/: Timer.h  opencore.cpp  opencore.h
engine/graphics/: atlas.h  graphics.cpp  graphics.h  modules.cpp  modules.h
include/Eclipsea/: Eclipsea.hpp
include/Eclipsea/Animation/: CollectionAnimation.hpp  FrameAnimation.hpp  MoveAnimation.hpp  MyAnimationPipeline.hpp  RotateAnimation.hpp  ScaleAnimation.hpp  TimerAnimation.hpp  TypewriterAnimation.hpp
include/Eclipsea/Sprite/: Waterrect.hpp
include/Eclipsea/Stage/: ConnectorTransition.hpp  ContainerStage.hpp  DualGameplayStage.hpp  GameplayStage.hpp  MainStage.hpp  PauseStage.hpp  PreloadStage.hpp  PurifierStage.hpp  WorldEditorStage.hpp
include/Eclipsea/UI/: DialogWindow.hpp  MultiImageBoard.hpp
include/Eclipsea/template/: UIFactory.inl
include/OpenCore/: GfxCore.h  JsonManager.hpp  Macros.h  Macros.hpp  Music.h  OpenCore.h  OpenCore.hpp  ResourceManager.cpp  ResourceManager.h  ResourceManager.hpp  SettingsManager.hpp  SoundEffect.h  SoundEffectManager.h  SoundEffectManager.hpp  Timer.h  Timer.hpp
include/OpenCore/Animation/: AnimationManager.h  AnimationManager.hpp  AnimationPipeline.h  AnimationPipeline.hpp  FadeAnimation.h  FadeAnimation.hpp  FrameAnimation.h  FrameAnimation.hpp  IAnimation.h  IAnimation.hpp  MoveAnimation.h  MoveAnimation.hpp  RotateAnimation.h  RotateAnimation.hpp  ScaleAnimation.h  ScaleAnimation.hpp  TextAnimation.hpp  TimerAnimation.h  TimerAnimation.hpp
include/OpenCore/Asset/: MapLoader.hpp  ResourceManager.hpp  SoundLoader.hpp  TextureLoader.hpp
include/OpenCore/Concepts/: OpenCore_Vec3.hpp  OpenCore_Wave.hpp  PerlinWave.hpp  SineWave.hpp  Vec3.hpp  WaterSimpler.hpp  WaveBase.hpp
include/OpenCore/Core/: GameInfo.hpp  Macros.hpp
include/OpenCore/Graphics/: DrawableConfigurator.hpp  ElementManager.h  ElementManager.hpp  GfxCore.h  GraphicsManager.h  GraphicsManager.hpp  IDrawableObject.h  IDrawableObject.hpp  ScaleManager.h  ScaleManager.hpp  Sprite.h  Sprite.hpp  SpriteManager.h  UIElement.h  UIElement.hpp
include/OpenCore/Stage/: BaseStage.hpp  GameplayStage.hpp  MainStage.hpp  OverlayStage.hpp  PreloadStage.h  PreloadStage.hpp  Stage.h  Stage.hpp  StageController.h  StageController.hpp  TopStage.hpp
include/Stage/: PreloadStage.h  Stage.h  StageController.h
maps/: map.cpp  map.h
note/: Collaboration.md  ECLIPSEA 整体设计.md  OpenCore Documentation.md  OpenCore Tutorial.md  OpenCore 引擎系统设计.md  OpenCore 设计.md  地图系统 设计.md  整体结构设计.md  资源导入表.txt  进度.md
note/Legacy/: Animation 动画设计.md  Collaboration.md  Entity类详解.md  OpenCore 引擎系统设计.md  Stage 场景系统设计.md  Timer 时间系统设计.md
note/Tools/: OCMP地图编辑器.md
project/: Game-Sample.cpp
project/include/: Union.hpp
project/include/Animation/: FadeAnimation.hpp
project/include/Stage/: GameplayStage.hpp  MainStage.hpp  PreloadStage.hpp
project/include/UI/: MultiImageBoad.hpp
project/include/template/: TextureFactory.inl
src/: Algorithms.cpp  Animations.cpp  FadeAnimation.cpp  GfxCore.cpp  JsonManager.cpp  MoveAnimation.cpp  Music.cpp  OpenCore.cpp  PreloadStage.cpp  ResourceManager.cpp  RotateAnimation.cpp  ScaleAnimation.cpp  SoundEffect.cpp  SoundEffectManager.cpp  Sprite.cpp  SpriteManager.cpp  StageController.cpp  Timer.cpp
src/Animations/: AnimationManager.cpp  FadeAnimation.cpp  FrameAnimation.cpp  MoveAnimation.cpp  RotateAnimation.cpp  ScaleAnimation.cpp  TimerAnimation.cpp
src/Gamplay/: Backpack.cpp  Item.cpp  ItemConsumable.cpp  ItemManager.cpp
src/Graphics/: DrawableConfigurator.cpp  ElementManager.cpp  GraphicsManager.cpp  IDrawableObject.cpp  ScaleManager.cpp
src/Graphics/UI/: BaseBackground.cpp  Button.cpp  FrameCounter.cpp  ImageBoard.cpp  Item.cpp  ItemContainer.cpp  ItemContainerCollection.cpp  StageBackground.cpp  UIElement.cpp
src/OpenCoreSrc/: AnimationManager.cpp  Backpack.cpp  BaseBackground.cpp  Button.cpp  CheckBox.cpp  Classic_Map.cpp  CollectionAnimation.cpp  ControllerManager.cpp  ElementManager.cpp  Entity.cpp  EntityRegister.cpp  EventManager.cpp  FadeAnimation.cpp  FrameAnimation.cpp  FrameCounter.cpp  GraphicsManager.cpp  HealthBar.cpp  IDrawableObject.cpp  IWorldController.cpp  ImageBoard.cpp  Item.cpp  ItemContainer.cpp  ItemManager.cpp  ItemSprite.cpp  MapExplorer.cpp  MapManager.cpp  Mob.cpp  MoveAnimation.cpp  MultiImageBoard.cpp  OpenCore.cpp  PhysicalProperties.cpp  ResourceManager.cpp  RotateAnimation.cpp  ScaleAnimation.cpp  Scrollbar.cpp  SettingsManager.cpp  SineWave.cpp  SoundEffectManager.cpp  Sprite.cpp  Stage.cpp  (+12 more)
src/OpenCoreSrc/Animations/: AnimationManager.cpp  TextAnimation.cpp
src/OpenCoreSrc/Gameplay/: Item.cpp  ItemContainer.cpp  ItemManager.cpp
src/OpenCoreSrc/Gamplay/: Item.cpp  ItemManager.cpp
src/OpenCoreSrc/Graphics/: DrawableConfigurator.cpp  ElementManager.cpp  GraphicsManager.cpp  IDrawableObject.cpp  ScaleManager.cpp
src/OpenCoreSrc/Map/: MapManager.cpp  OrdMap.cpp
src/OpenCoreSrc/Stage/: Stage.cpp  StageController.cpp  StageManager.cpp
src/ProjectSrc/: Eclipsea.cpp
src/ProjectSrc/Animation/: CollectionAnimation.cpp  FadeAnimation.cpp  FrameAnimation.cpp  MoveAnimation.cpp  RotateAnimation.cpp  ScaleAnimation.cpp  TimerAnimation.cpp  TypewriterAnimation.cpp
src/ProjectSrc/Gameplay/: Backpack.cpp  ItemConsumable.cpp
src/ProjectSrc/Sprite/: Waterrect.cpp
src/ProjectSrc/Stage/: ContainerStage.cpp  DualGameplayStage.cpp  GameplayStage.cpp  MainStage.cpp  PauseStage.cpp  PreloadStage.cpp  PurifierStage.cpp  (+1 more)
src/Stage/: GameplayStage.cpp  MainStage.cpp  PreloadStage.cpp  StageController.cpp
stage/: game_preload.cpp  game_preload.h  main_menu.cpp  main_menu.h  stage.h  stage_controller.h
tools/: ocmp_map_editor.py  run_editor.bat
(+125 files in other folders)
